kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discordadminbot
  namespace: snow-discord-bot
spec:
  selector:
    app: discordadminbot
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
