kube/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: discordadminbot
  namespace: snow-discord-bot
spec:
  parentRefs:
    - name: KUSTOMIZE_REPLACE_ME
      sectionName: KUSTOMIZE_REPLACE_ME
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: discordadminbot
          port: 80
